k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudlab-frontend
  namespace: cloudlab
spec:
  type: ClusterIP
  selector:
    app: cloudlab-frontend
  ports:
    - port: 80
      targetPort: 80
