k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cloudlab-service

spec:
  type: LoadBalancer

  selector:
    app: cloudlab-app

  ports:
  - port: 80
    targetPort: 80
