k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudlab-ingress
  namespace: cloudlab
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx
  rules:
    - host: cloudlab.example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cloudlab-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudlab-frontend
                port:
                  number: 80
